# graph-rag-memory

./: .gitignore  GraphRAG_implementation.ipynb  ImplementingRAG.ipynb  ImplementingRAG.md  RAG_VD_implementation.ipynb  RAG_implmentation1.py  RAG_implmentation1.txt  RAG_test.ipynb  README.md  cleanpdf.py  clearcache.py  dash_app.py  dash_app_fast.py  final_check.py  gRAG_fast.py  gRAG_imp1.py  gRAG_imp2.py  grag_params.yaml  graph_rag.gexf  import_gemma.py  ingested_files.txt  my_document.txt  pyproject.toml  rag_conversations.jsonl  rag_documents.txt  rag_interpretations.txt  rag_oll.py  requirements.txt
.claude/: settings.local.json
compaction_test_data/backups/sweep_20260504_101504/: manifest.json
compaction_test_data/chroma/: chroma.sqlite3
compaction_test_output/: run_log.csv  summary.json
docs/: architecture.md
examples/: compaction_test.py  demo.py
examples/sample_docs/: einstein.txt
grag/: __init__.py  access.py  config.py  dedup.py  extractor.py  graph.py  ingest.py  llm.py  memory.py  rag.py
rag_db/: chroma.sqlite3
rag_db/eef77df9-deb0-437d-b5b1-4ddb1895f006/: index_metadata.pickle
